driver performance added

--- a/projects/admin/src/app/components/driver-form-container/driver-form-container.component.html
+++ b/projects/admin/src/app/components/driver-form-container/driver-form-container.component.html
@@ -17,6 +17,9 @@
       <button [class.active]="activeTab === 'assignments'" (click)="navigateTo('assignments')">
         <i class="bi bi-clipboard-data"></i> Form Assignments
       </button>
+      <button [class.active]="activeTab === 'performance'" (click)="navigateTo('performance')">
+        <i class="bi bi-speedometer2"></i> Drivers Performance
+      </button>
     </div>
   </div>
 
