--- a/projects/admin/src/app/components/route-planner/route-planner.component.html
+++ b/projects/admin/src/app/components/route-planner/route-planner.component.html
@@ -89,7 +89,7 @@
         <div class="section-header">
           <i class="bi bi-upload"></i> Import Store Locations
         </div>
-        <div class="compact-content">
+        <div class="compact-content expanded">
           <div class="file-input-container">
             <label for="fileUpload" class="file-input-label">Choose File</label>
             <span class="file-name">{{ getFileName() }}</span>
