LAST CHECKPOINT, DO NOT USE ANY OTHER

--- a/projects/admin/src/app/components/dashboard/dashboard.component.html
+++ b/projects/admin/src/app/components/dashboard/dashboard.component.html
@@ -52,7 +52,7 @@
         </div>
         <div class="card-content">
           <h3>Driver Forms</h3>
-          <p class="card-description">Manage driver forms and assignments</p>
+          <p class="card-description">Manage driver forms, assignments and performance</p>
         </div>
       </div>
 
